panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__test_one_param_macro_called_with_zero_args.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_one_param_macro_called_with_zero_args.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_one_param_macro_called_with_zero_args.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration value~2 `int` (negate 42))
         (return (negate (name value~2 `int`))))))

----- stderr -----
